<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_session_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@drawable/selector"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/session_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_date"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/session_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/session_created_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_start_time"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/session_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/session_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/session_kbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:text="@string/kbs"
            android:textStyle="italic" />


    </LinearLayout>

</LinearLayout>