<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uni_osnabrueck.ikw.eegdroid">

    <item
        android:id="@+id/centering"
        android:icon="@drawable/ic_baseline_align_vertical_center_24"
        android:title="Centering"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notify"
        android:icon="@drawable/ic_notifications_off_white_24dp"
        android:title="@string/menu_record_notify"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cast"
        android:icon="@drawable/ic_cast_white_24dp"
        android:title="@string/menu_record_cast"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/traumConfig"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Settings"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/scan"
        android:icon="@drawable/ic_bluetooth_searching_white_24dp"
        android:title="@string/menu_scan"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>